--- a/wishlist/templates/checklist.html
+++ b/wishlist/templates/checklist.html
@@ -16,7 +16,8 @@
         Room ID: {{context.room.uuid}}
     </h4>
 
-    <form class="container" action="/rooms/{{context.room.uuid}}/create" method="POST">
+    <form class="container" action="/rooms/{{context.room.uuid}}/create" method="POST" autocomplete="off">
+        <input autocomplete="false" name="hidden" type="text" style="display:none;">
         <div class="form-group mt-2 mb-2">
           <h4 for="message" class="text-white mb-3">Make a Wish List 😎</h4>
           <input type="text" class="form-control" id="message" aria-describedby="message" name="message" placeholder="Add grocery items or your bucket list!" required>
@@ -32,7 +33,8 @@
                 {% for content in context.contents %}
                     <div class="form-inline">
                         <div class="d-flex">
-                            <form action="/rooms/{{content.room_id}}/update/{{content.id}}" method="POST" class="d-flex col-md-10">
+                            <form action="/rooms/{{content.room_id}}/update/{{content.id}}" method="POST" class="d-flex col-md-10" autocomplete="off" >
+                                <input autocomplete="false" name="hidden" type="text" style="display:none;">
                                 <div class="col-md-9 mr-2">
                                     <input type="text" name="amend" value="{{content.content}}" class="form-control" required>
                                 </div>
@@ -44,7 +46,7 @@
                                 
                             </form> 
                             <div class="col-md-auto">
-                                <form action="/rooms/{{content.room_id}}/delete/{{content.id}}" method="POST">
+                                <form action="/rooms/{{content.room_id}}/delete/{{content.id}}" method="POST" autocomplete="off" >
                                     <button class="btn btn-danger"> 
                                         Delete
                                     </button>
